--- a/style.css
+++ b/style.css
@@ -8,8 +8,63 @@
     height:100vh;
     width:100vw;
     background:black;
+    color: white;
 }
 
 .header{
-    
+    display: flex;
+    font-size: 1.2rem;
+    align-items: center;
+}
+.header img{
+    height: 50px;
+    margin: 10px 15px;
+}
+.nav-items{
+    display: flex;
+    margin: 10px;
+    width: 100%;
+}
+.nav-items ul{
+    display: flex;
+    list-style-type: none;
+}
+.nav-items ul li{
+    margin: 10px 25px;
+    cursor: pointer;
+}
+.logintab a{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    color: white;
+    margin: 10px 10px;
+    background-color: gray;
+    width: 80px;
+    height: 30px;
+    border-radius: 10px;
+}
+.logintab{
+    display: flex;
+    /* margin-left: 500px;
+    margin-right: 50px; */
+    justify-content:center ;
+    align-items: center;
+    height: 50px;
+    width: 300px;
+}
+.mode{
+    display: flex;
+    margin: 10px 20px;
+    background-color: rgb(38, 36, 36);
+    justify-content: space-evenly;
+    height: 50px;
+    width: 100px;
+    align-items: center;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.mode i{
+    padding: 2px;
 }
