--- a/style.css
+++ b/style.css
@@ -3,14 +3,13 @@
     padding: 0px;
     box-sizing: border-box;
 }
-
 #wrapper{
     height:100vh;
     width:100vw;
     background:black;
     color: white;
 }
-
+/* Navigation bar */
 .header{
     display: flex;
     font-size: 1.2rem;
@@ -40,7 +39,7 @@
     text-decoration: none;
     color: white;
     margin: 10px 10px;
-    background-color: gray;
+    background-color:rgb(38, 36, 36);
     width: 80px;
     height: 30px;
     border-radius: 10px;
