--- a/style.css
+++ b/style.css
@@ -8,62 +8,109 @@
     width:100vw;
     background:black;
     color: white;
+    overflow-x: hidden;
 }
 /* Navigation bar */
 .header{
-    display: flex;
+    display:flex;
+    justify-content: space-around;
     font-size: 1.2rem;
+    color:white;
     align-items: center;
+    padding:1rem;
+    box-shadow: 0 4px 40px 0 rgba(248, 245, 245, 0.33);
+
 }
 .header img{
-    height: 50px;
-    margin: 10px 15px;
+    height: 4rem;
 }
 .nav-items{
     display: flex;
-    margin: 10px;
-    width: 100%;
+    height:4rem;
+    width:40vw;
+    align-items: center;
 }
 .nav-items ul{
-    display: flex;
-    list-style-type: none;
+    width:100%;
+    display:flex;
+    justify-content: space-evenly;
+    list-style-type: none;    
 }
 .nav-items ul li{
-    margin: 10px 25px;
+
+    font-size:22px;
+    font-family: Inter,sans-serif;
     cursor: pointer;
+    letter-spacing: 1px; 
+    padding-top: 5px;
+    padding-bottom: 10px;
 }
-.logintab a{
-    display: flex;
+.nav-items ul li:hover{
+    transition: all .1s;
+    border-bottom: 3.5px solid white;
+    font-weight: 500;
+}
+  /* LOGIN BUTTON */
+
+  .btn {
+    align-items: center;
+    background-color: #fff;
+    border: 2px solid #000;
+    box-sizing: border-box;
+    color: #000;
+    cursor: pointer;
+    display: inline-flex;
+    fill: #000;
+    font-family: Inter,sans-serif;
+    font-size: 20px;
+    font-weight: 550;
+    height: 48px;
     justify-content: center;
-    align-items: center;
+    letter-spacing: 0.5px;
+    line-height: 24px;
+    min-width: 140px;
+    outline: 0;
+    padding: 0 17px;
+    text-align: center;
     text-decoration: none;
+    transition: all .3s;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+  }  
+  .btn:hover {
+    border-color: white;
     color: white;
-    margin: 10px 10px;
-    background-color:rgb(38, 36, 36);
-    width: 80px;
-    height: 30px;
-    border-radius: 10px;
-}
-.logintab{
+    background-color: black;
+  }
+  
+  .btn:active {
+    border-color: white;
+    color: white;
+    background-color: black;
+  }
+  
+  @media (min-width: 768px) {
+    .btn{
+      min-width: 170px;
+    }
+  }
+  .combo{
     display: flex;
-    /* margin-left: 500px;
-    margin-right: 50px; */
-    justify-content:center ;
     align-items: center;
-    height: 50px;
-    width: 300px;
-}
-.mode{
-    display: flex;
-    margin: 10px 20px;
-    background-color: rgb(38, 36, 36);
-    justify-content: space-evenly;
-    height: 50px;
-    width: 100px;
-    align-items: center;
-    border-radius: 5px;
-    cursor: pointer;
-}
-.mode i{
-    padding: 2px;
-}
+    justify-content: center;
+
+  }
+  .mode{
+    margin-left: 15px;
+    background: none;
+    cursor:pointer;
+    height:45px;   
+    border: none; 
+  }
+  .mode img{
+    width:2rem;
+    height:2.5rem;
+  }
+
+
