--- a/style.css
+++ b/style.css
@@ -6,16 +6,24 @@
 #wrapper{
     height:100vh;
     width:100vw;
-    background:black;
-    color: white;
+    background:var(--primary-color);
+    color: var(--secondary-color);
     overflow-x: hidden;
+}
+ :root{
+  --primary-color:black;
+  --secondary-color:white;
+} 
+.light-theme{
+  --primary-color:white;
+  --secondary-color:black;
 }
 /* Navigation bar */
 .header{
     display:flex;
     justify-content: space-around;
     font-size: 1.2rem;
-    color:white;
+    color:var(--secondary-color);
     align-items: center;
     padding:1rem;
     box-shadow: 0 4px 40px 0 rgba(248, 245, 245, 0.33);
@@ -47,20 +55,20 @@
 }
 .nav-items ul li:hover{
     transition: all .1s;
-    border-bottom: 3.5px solid white;
+    border-bottom: 3.5px solid var(--secondary-color);
     font-weight: 500;
 }
   /* LOGIN BUTTON */
 
   .btn {
     align-items: center;
-    background-color: #fff;
-    border: 2px solid #000;
+    background-color: var(--secondary-color);
+    border: 2px solid var(--primary-color);
     box-sizing: border-box;
-    color: #000;
+    color: var(--primary-color);
     cursor: pointer;
     display: inline-flex;
-    fill: #000;
+    fill: var(--primary-color);
     font-family: Inter,sans-serif;
     font-size: 20px;
     font-weight: 550;
@@ -74,20 +82,20 @@
     text-align: center;
     text-decoration: none;
     transition: all .3s;
-    user-select: none;
     -webkit-user-select: none;
+    user-select: none;
     touch-action: manipulation;
   }  
   .btn:hover {
-    border-color: white;
-    color: white;
-    background-color: black;
+    border-color: var(--secondary-color);
+    color: var(--secondary-color);
+    background-color: var(--primary-color);
   }
   
   .btn:active {
-    border-color: white;
-    color: white;
-    background-color: black;
+    border-color: var(--secondary-color);
+    color: var(--secondary-color);
+    background-color: var(--primary-color);
   }
   
   @media (min-width: 768px) {
@@ -113,4 +121,9 @@
     height:2.5rem;
   }
 
+    /* BARS */
+    /* .bars{
+      cursor: pointer;
+    } */
 
+  
