--- a/style.css
+++ b/style.css
@@ -126,4 +126,48 @@
       cursor: pointer;
     } */
 
-  
+    .first-section{
+      width:100%;
+      height:35rem;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+    .first-section p{
+      color:var(--secondary-color);
+      font-size: xx-large;
+      font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    }
+    .search-section{
+      position: relative;
+      margin-top:-15% ;
+      margin-bottom: 50px;
+      width:55%;
+      height:35px;
+      background-color: var(--secondary-color);
+      border-radius: 1rem;
+    }  
+    .search-section:hover{
+      transition: all 0.3s;
+      transform: scale(1.02);
+    }
+    .search-section input{
+      position: absolute;
+      width:90%;
+      height:100%;
+      outline: none;
+      border: none;
+      border-radius: 1rem;
+      background-color:var(--secondary-color);
+
+    }
+    .search-section ::-webkit-input-placeholder{
+      color:var(--primary-color);
+      font-weight: 400;
+      font-size:15px;
+    }
+    .search-section img{
+      padding: 9.5px 10px 0px 10px ;
+      cursor: pointer;
+    }
