--- a/login.css
+++ b/login.css
@@ -99,6 +99,7 @@ a{
     font-size: 14px;
     text-decoration: none;
     margin:15px 0px;   
+    cursor: pointer;
 }
 a.forgot{
     padding-bottom: 3px;
