--- a/style.css
+++ b/style.css
@@ -171,3 +171,98 @@
       padding: 9.5px 10px 0px 10px ;
       cursor: pointer;
     }
+    .card{
+      display: flex;
+    flex-wrap: wrap;
+    gap:1.5rem;
+    flex:1 1 30rem;
+    align-items: center;
+    justify-content:center;
+
+    }
+    .cards{
+      display: flex;
+      flex-direction: column;
+      height:400px;
+      width:300px;
+      background-color: grey;
+      align-items: center;
+      color: var(--primary-color);
+      border-radius: 10px;
+      backdrop-filter: blur(15px);
+      padding:30px;
+    }
+    .cards img{
+      padding-bottom: 0.5rem;
+    }
+    .cards h2{
+      color:#fff;
+      letter-spacing: 1.5px;
+
+    }
+    .cards p{
+      line-height: 1.5;
+      font-size: large;
+      font-weight: 500;
+      margin: auto;
+      padding: 0.9rem;
+      font-family: Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+    }
+    .checked{
+      color:orange;
+      cursor: pointer;
+    }
+    .stars{
+      padding-bottom: 15px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+   
+  .button {
+  display: flex;
+  align-items:center;
+  justify-content: center;
+  appearance: none;
+  background-color: transparent;
+  border: 2px solid #1A1A1A;
+  border-radius: 8px;
+  box-sizing: border-box;
+  color: black;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+  font-size: 16px;
+  font-weight: 600;
+  line-height: normal;
+  margin: 0;
+  min-height: 40px;
+  min-width: 0;
+  outline: none;
+  text-align: center;
+  text-decoration: none;
+  transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: 60%;
+  will-change: transform;
+
+}
+
+.button:disabled {
+  pointer-events: none;
+}
+
+.button:hover {
+  color: #fff;
+  background-color: #1A1A1A;
+  box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+  transform: translateY(-2px);
+}
+
+.button:active {
+  box-shadow: none;
+  transform: translateY(0);
+}
