--- a/style.css
+++ b/style.css
@@ -127,6 +127,7 @@
     } */
 
     .first-section{
+      position: relative;
       width:100%;
       height:35rem;
       display: flex;
@@ -136,8 +137,16 @@
     }
     .first-section p{
       color:var(--secondary-color);
-      font-size: xx-large;
+      font-size: 2.2rem;
       font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    }
+    #para1{
+      position: absolute;
+      top: 16rem;
+    }
+    #para2{
+      position: absolute;
+      top: 20rem;
     }
     .search-section{
       position: relative;
@@ -265,4 +274,67 @@
 .button:active {
   box-shadow: none;
   transform: translateY(0);
+}
+
+#joinus{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+  font-family: Inter,sans-serif;
+  margin: 6rem 1rem;
+}
+#joinus p{
+  font-size: 1.3rem;
+}
+#joinus h1{
+  font-size: 2rem;
+}
+.heading{
+  font-size: 3rem;
+  font-family: Inter,sans-serif;
+  margin: 2rem 2rem;
+}
+#aboutus{
+  display: flex;
+  width: 90%;
+  flex-direction: column;
+  align-items: center;
+  margin: 1rem 0rem;
+  justify-content: center;
+  text-align: center;
+  border: 1px solid var(--secondary-color);
+  border-radius: 20px;
+  box-shadow: 5px 5px 20px;
+}
+#aboutus p{
+  font-size: 1.4rem;
+  line-height: 2rem;
+  margin: 1rem 1.5rem;
+}
+#aboutus h3,h4{
+  font-family: Inter,sans-serif;
+  margin: 1.5rem 0rem;
+}
+#numbers-tab{
+  display: flex;
+  width: 100%;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.nums h3{
+  font-size: 1.5rem;
+}
+.nums h4{
+  font-size: 1.3rem;
+}
+.about-tab{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#supportus{
+  font-size: 2rem;
+  font-family: Inter,sans-serif;
 }
